--- a/dest/index.html
+++ b/dest/index.html
@@ -34,14 +34,14 @@
                     <li><a href="/serve.html">服务 </a></li>
                     <li><a href="/case.html">案例</a></li>
                     <li><a href="/contact.html">联系</a></li>
-                    <li><a href="badges.html">留言</a></li>
+                    <li><a href="/msg.html">留言</a></li>
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
                     <li><a href="/">首页</a></li>
                     <li><a href="/serve.html">服务 </a></li>
                     <li><a href="/case.html">案例</a></li>
                     <li><a href="/contact.html">联系</a></li>
-                    <li><a href="/contact.html">留言</a></li>
+                    <li><a href="/msg.html">留言</a></li>
                 </ul>
             </div>
         </div>
@@ -54,16 +54,21 @@
         <!-- Swiper -->
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide">Slide 1</div>
-                <div class="swiper-slide">Slide 2</div>
-                <div class="swiper-slide">Slide 3</div>
-                <div class="swiper-slide">Slide 4</div>
-                <div class="swiper-slide">Slide 5</div>
-                <div class="swiper-slide">Slide 6</div>
-                <div class="swiper-slide">Slide 7</div>
-                <div class="swiper-slide">Slide 8</div>
-                <div class="swiper-slide">Slide 9</div>
-                <div class="swiper-slide">Slide 10</div>
+                <div class="swiper-slide">
+                    <img class="responsive-img" src="/assets/images/banner1.jpg">
+                </div>
+                <div class="swiper-slide">
+                    <img class="responsive-img" src="/assets/images/banner2.jpg">
+                </div>
+                <div class="swiper-slide">
+                    <img class="responsive-img" src="/assets/images/banner3.jpg">
+                </div>
+                <div class="swiper-slide">
+                    <img class="responsive-img" src="/assets/images/banner4.jpg">
+                </div>
+                <div class="swiper-slide">
+                    <img class="responsive-img" src="/assets/images/banner5.jpg">
+                </div>
             </div>
             <!-- Add Pagination -->
             <div class="swiper-pagination"></div>
@@ -135,19 +140,19 @@
                     <h3 class="m-prod__tit">PRODUCT</h3>
                     <p class="m-prod__txt">案例展示</p>
                     <div class="m-prod__img mt40">
-                        <a href="#"><img src="/assets/images/yisheng.jpg" alt=""></a>
+                        <img class="materialboxed" src="/assets/images/yisheng.jpg" alt="">
                     </div>
                     <p class="m-prod__intro">我们拥有多年项目开发经验，与优美齿公司进行深度合作，开发了一整套Invisible braces从生产到实际应用的系统。</p>
                 </div>
                 <div class="col s12 m6 l8 row">
                     <div class="col s12 mb20">
-                        <a href="#"><img class="responsive-img" src="/assets/images/prod.jpg" alt=""></a>
+                        <img class="responsive-img materialboxed" src="/assets/images/prod.jpg" alt="">
                     </div>
                     <div class="col s6">
-                        <a href="#"><img class="responsive-img" src="/assets/images/ren.jpg" alt=""></a>
+                       <img class="responsive-img materialboxed" src="/assets/images/ren.jpg" alt="">
                     </div>
                     <div class="col s4">
-                        <a href="#"><img class="responsive-img" src="/assets/images/diannao.jpg" alt=""></a>
+                       <img class="responsive-img materialboxed" src="/assets/images/diannao.jpg" alt="">
                     </div>
                 </div>
             </div>
