--- a/dest/case.html
+++ b/dest/case.html
@@ -34,14 +34,14 @@
                     <li><a href="/serve.html">服务 </a></li>
                     <li><a href="/case.html">案例</a></li>
                     <li><a href="/contact.html">联系</a></li>
-                    <li><a href="badges.html">留言</a></li>
+                    <li><a href="/msg.html">留言</a></li>
                 </ul>
                 <ul class="side-nav" id="mobile-demo">
                     <li><a href="/">首页</a></li>
                     <li><a href="/serve.html">服务 </a></li>
                     <li><a href="/case.html">案例</a></li>
                     <li><a href="/contact.html">联系</a></li>
-                    <li><a href="/contact.html">留言</a></li>
+                    <li><a href="/msg.html">留言</a></li>
                 </ul>
             </div>
         </div>
@@ -50,20 +50,25 @@
 
 
 <section class="cnt">
-    <div class="m-banner">
+        <div class="m-banner">
         <!-- Swiper -->
         <div class="swiper-container">
             <div class="swiper-wrapper">
-                <div class="swiper-slide">Slide 1</div>
-                <div class="swiper-slide">Slide 2</div>
-                <div class="swiper-slide">Slide 3</div>
-                <div class="swiper-slide">Slide 4</div>
-                <div class="swiper-slide">Slide 5</div>
-                <div class="swiper-slide">Slide 6</div>
-                <div class="swiper-slide">Slide 7</div>
-                <div class="swiper-slide">Slide 8</div>
-                <div class="swiper-slide">Slide 9</div>
-                <div class="swiper-slide">Slide 10</div>
+                <div class="swiper-slide">
+                    <img class="responsive-img" src="/assets/images/banner1.jpg">
+                </div>
+                <div class="swiper-slide">
+                    <img class="responsive-img" src="/assets/images/banner2.jpg">
+                </div>
+                <div class="swiper-slide">
+                    <img class="responsive-img" src="/assets/images/banner3.jpg">
+                </div>
+                <div class="swiper-slide">
+                    <img class="responsive-img" src="/assets/images/banner4.jpg">
+                </div>
+                <div class="swiper-slide">
+                    <img class="responsive-img" src="/assets/images/banner5.jpg">
+                </div>
             </div>
             <!-- Add Pagination -->
             <div class="swiper-pagination"></div>
@@ -72,7 +77,6 @@
             <div class="swiper-button-prev"></div>
         </div>
     </div>
-    
     <div class="m-show">
         <div class="container">
             <div class="hd">
@@ -82,22 +86,22 @@
             </div>
             <div class="bd row">
                 <div class="col s12 m6 l4">
-                    <img class="responsive-img" src="/assets/images/pic1.jpg">
+                    <img class="responsive-img materialboxed" src="/assets/images/pic1.jpg">
                 </div>
                 <div class="col s12 m6 l4">
-                    <img class="responsive-img" src="/assets/images/pic2.jpg">
+                    <img class="responsive-img materialboxed" src="/assets/images/pic2.jpg">
                 </div>
                 <div class="col s12 m6 l4">
-                    <img class="responsive-img" src="/assets/images/pic3.jpg">
+                    <img class="responsive-img materialboxed" src="/assets/images/pic3.jpg">
                 </div>
                 <div class="col s12 m6 l4">
-                    <img class="responsive-img" src="/assets/images/pic4.jpg">
+                    <img class="responsive-img materialboxed" src="/assets/images/pic4.jpg">
                 </div>
                 <div class="col s12 m6 l4">
-                    <img class="responsive-img" src="/assets/images/pic5.jpg">
+                    <img class="responsive-img materialboxed" src="/assets/images/pic5.jpg">
                 </div>
                 <div class="col s12 m6 l4">
-                    <img class="responsive-img" src="/assets/images/pic6.jpg">
+                    <img class="responsive-img materialboxed" src="/assets/images/pic6.jpg">
                 </div>
             </div>
 
